# brick-vision

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  databricks.yml  pyproject.toml
apps/console/: index.html  package-lock.json  package.json  ui_strings.yaml  vite.config.ts
apps/console-api/: README.md  pyproject.toml
apps/console-api/src/console_api/: __init__.py  __main__.py  capability_graph_service.py  capability_rag_service.py  databricks_sql.py  evaluation_events.py  evaluation_service.py  identity.py  lakebase.py  main.py  migration_runs.py  model_invocation_ledger.py  observability_service.py  runtime_bridge.py  runtime_status.py  settings.py  skill_builder_service.py  skill_contracts.py  skill_execution_service.py  skill_runtime_registry.py  usecase_artifacts.py  usecase_candidates.py  usecase_executions.py  usecase_planner.py  usecase_records.py  usecase_service.py  usecase_suggestions.py  usecase_tool_proofs.py  workspace_context_service.py  workspace_visibility.py
apps/console-api/src/console_api/routers/: __init__.py  health.py  identity.py  knowledge.py
ci/: lint.yaml  test.yaml
config/evaluation/: README.md  capability_graph_retrieval_v1.jsonl  evalsets.json  hipporag2_retrieval_v1.jsonl  platform_cost_v1.jsonl  skill_execution_v1.jsonl  usecase_lifecycle_v1.jsonl  workspace_context_v1.jsonl
config/workspaces/: partner-dev.workspace.yaml
docs/: 19-local-development.md  22-changelog.md  23-databricks-capability-graph.md  24-agent-operating-model.md  25-brickvision-direction-review.md  26-shared-context-layer-implementation.md
scripts/: bundle_validate_offline.py  deploy_ml_training_driver.py  evaluation_lib.py  inspect_ml_data.py  local_deploy.sh  run_evaluation_scorers.py  sample_live_evaluation_traces.py  setup_data.sh  start_local_app.sh  sync_mlflow_eval_datasets.py  validate_evidence_substrate.py
scripts/local_deploy/: README.md  __init__.py  _lib.py  deploy_indexer_job.py  provision_workspace.py  start_local_spa.sh
skills/: README.md
skills/databricks.statement-execute/: SKILL.yaml  skill.py
skills/delta.pyspark-task-plan/: SKILL.yaml  skill.py
skills/delta.pyspark-transform/: SKILL.yaml  scorers.py  (+1 more)
src/brickvision/: pyproject.toml
src/brickvision/cli/: __init__.py  __main__.py  evaluation.py  indexer.py  install.py  uninstall.py  workspace.py
src/brickvision/install/: __init__.py  state.py
src/brickvision/install/migrations/: __init__.py
src/brickvision/install/preflight/: __init__.py  capability_graph.py  capability_graph_probes.py  runtime_floors.py  uc_bindings.py  vector_search.py
src/brickvision_runtime/: __init__.py  capability_evidence.py  config.py  data_pipeline.py  databricks_api_executor.py  evidence_quality.py  harness.py  hitl.py  pyproject.toml  pyspark_transform_driver.py
src/brickvision_runtime/_vendor/: __init__.py  minyaml.py
src/brickvision_runtime/capability_graph/: __init__.py  embed.py  exemplars.py  graph_builder.py  llm.py  persist.py  promote.py  publish.py  retention.py  retrieve.py  smoke.py  vs_upsert.py
src/brickvision_runtime/capability_graph/schemas/: __init__.py  corpus.py  operational.py  taxonomy.py  types.py
src/brickvision_runtime/capability_graph/sources/: __init__.py  blog_adapter.py  docs_adapter.py  labs_repo_adapter.py  openapi_adapter.py  sdk_adapter.py
src/brickvision_runtime/core/: budget.py  env.py  time.py  workspace.py
src/brickvision_runtime/databricks_jobs/: __init__.py  run_capability_indexer.py  run_workspace_kg.py
src/brickvision_runtime/eval/gold/: __init__.py  capability_graph.py
src/brickvision_runtime/eval/scorers/: __init__.py  builtins.py  capability_graph.py  no_mock_or_fake_implementations.py
src/brickvision_runtime/failures/: __init__.py
src/brickvision_runtime/install/: __init__.py
src/brickvision_runtime/install/preflight/: __init__.py  uc_bindings.py
src/brickvision_runtime/kg/: claims.py  extractor.py  predicates.py  retriever.py  schemas.py
src/brickvision_runtime/ml/: __init__.py  alias_assigner.py  backend_probe_driver.py  databricks_training.py  readiness.py  training_driver.py
src/brickvision_runtime/observability/: __init__.py  model_invocation_ledger.py
src/brickvision_runtime/orchestration/: __init__.py
src/brickvision_runtime/skills/: __init__.py  uc_catalog_introspect.py
src/brickvision_runtime/tools/: __init__.py  uc.py
tests/: conftest.py
(+169 files in other folders)
