[project]
name = "brickvision-monorepo"
version = "0.0.0"
description = "BrickVision monorepo workspace root (N1)."
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["src/brickvision_runtime", "src/brickvision", "apps/console-api"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",     # pydocstyle (we have many partner-facing docstrings; gradual adoption)
    "ANN",   # annotations (gradual)
    "COM812", "ISC001",  # ruff format compatibility
    "S101",  # asserts in tests are fine
    "PLR2004",
    "TRY003",
    "EM101", "EM102",
    "FIX", "TD",
    "ERA001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["INP001", "PT", "S", "ARG", "FBT"]
"scripts/**" = ["INP001", "T201"]
"src/brickvision_runtime/_vendor/**" = ["ALL"]
"apps/console-api/**" = ["INP001"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
filterwarnings = ["error::DeprecationWarning"]
