[project]
name = "brickvision"
version = "0.6.0"
description = "BrickVision build-time CLI and meta-skills (Phase 0 N5)."
requires-python = ">=3.11"
authors = [{ name = "BrickVision team" }]

dependencies = [
    "brickvision-runtime>=0.1.0,<0.2.0",
    "click>=8.1",
    "rich>=13.0",
    "streamlit>=1.34",
    "openai-agents>=0.1",
    "beautifulsoup4>=4.12",
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.21",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
brickvision = "brickvision.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["brickvision*"]
