[project]
name = "brickvision-runtime"
version = "0.1.0"
description = "BrickVision harness-side runtime substrate (Phase 1 N8-N19)."
requires-python = ">=3.11"
authors = [{ name = "BrickVision team" }]

dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "databricks-sdk>=0.68",
    "mlflow>=3.0",
    "openai-agents>=0.1",
]

[project.optional-dependencies]
kg = ["networkx>=3.2"]
ml = ["scikit-learn>=1.4"]
lakeflow = ["pyspark>=3.5"]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["brickvision_runtime*"]
